# ag-cube-cm

./: .gitignore  README.md  ag_cube_download_soil.py  ag_cube_download_weather.py  guadalupe_dssat_yield.nc  pyproject.toml  test_dssat_real_data.py  test_dssat_run_simulation.py
.claude/: mcp_config.json
.claude/commands/: spatial-crop-modeler.md
example_test/: test_banana_n_module.py  test_banana_real_data.py  test_dssat_module.py  test_dssat_run_simulation.py
examples/: spatial_banana_n_run.py  spatial_dssat_run.py
options/: ag_cube_soil_config.yaml  ag_cube_weather_config.yaml  test_banana.yaml  test_dssat.yaml
src/ag_cube_cm/: __init__.py  mcp_server.py  py.typed
src/ag_cube_cm/config/: __init__.py  loader.py  schemas.py
src/ag_cube_cm/ingestion/: __init__.py  boundaries.py  files_manager.py  gis_functions.py  soil.py  utils.py  weather.py
src/ag_cube_cm/models/: base.py  factory.py
src/ag_cube_cm/models/banana_n/: _base.py  base.py  management.py  soil.py  utils.py  weather.py
src/ag_cube_cm/models/dssat/: base.py
src/ag_cube_cm/models/dssat/exp_files/: AGRW2409.CSX  KEAG0003.BNX  KEAG8104.MZX
src/ag_cube_cm/models/dssat/static/Genotype/: BSCER048.ECO  MZCER048.CUL  MZCER048.ECO  SCCAN048.CUL  SCCSP048.CUL
src/ag_cube_cm/spatial/: __init__.py  data.py  raster_ops.py  reporter.py  spatial_cm.py
src/ag_cube_cm/transform/: __init__.py  soil_cube.py  weather_cube.py
testcases/: test_dssat_malawi.yaml  test_malawi_small.py  test_soil_guadeloupe.py
